--- a/lucky-my/res/values/strings.xml
+++ b/lucky-my/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">HelloWorldImmersion</string>
     <string name="hello_world"></string>
-    <string name="voice_command">Tumo demo</string>
+    <string name="voice_command">Lucky demo</string>
     <string name="glass_voice_prompt">tell me what\'s on your mind</string>
+    <string name="livecard_content">LiveCard Is Now Live</string>
 
 </resources>
