--- a/htigran/res/values/strings.xml
+++ b/htigran/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">HelloWorldImmersion</string>
     <string name="hello_world"></string>
-    <string name="voice_command">register</string>
+    <string name="voice_command">Guess person</string>
     <string name="glass_voice_prompt">Tell the first name and last name!</string>
     <string name="livecard_content">LiveCard Is Now Live</string>
 
