--- a/TumoGame/res/values/strings.xml
+++ b/TumoGame/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_manage_db">Manage DB</string>
     <string name="title_activity_select_db">Select DB</string>
     <string name="menu_item_play">Play</string>
+    <string name="menu_item_restart">Restart game</string>
     <string name="menu_item_manage_db">Manage DB</string>
     <string name="menu_item_send">Send</string>
     <string name="menu_item_edit">Edit</string>
