--- a/TumoGame/res/values/strings.xml
+++ b/TumoGame/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="play_glassassin">play glassassin</string>
     <string name="title_activity_main">Glassassin</string>
     <string name="title_activity_manage_db">Manage DB</string>
+    <string name="title_activity_edit_db">Edit DB</string>
     <string name="title_activity_select_db">Select DB</string>
+    <string name="title_activity_view_all">View all</string>
+    <string name="title_activity_add_person">Add person</string>
+    <string name="title_activity_guess_person">Guess person</string>
     <string name="menu_item_play">Play</string>
     <string name="menu_item_restart">Restart game</string>
     <string name="menu_item_manage_db">Manage DB</string>
@@ -15,5 +19,15 @@
     <string name="menu_item_guess_person">Guess person</string>
     <string name="menu_item_settings">Settings</string>
     <string name="menu_item_exit">Exit</string>
+    <string name="menu_item_add">Add person</string>
+    <string name="menu_item_delete">Delete</string>
+    <string name="menu_item_picture">Take a picture</string>
+    <string name="menu_item_add_adj">Add adjective</string>
+    <string name="menu_item_done">Done</string>
+    <string name="menu_item_accept">Accept</string>
+    <string name="menu_item_decline">Decline</string>
+    <string name="menu_item_view_all">View all</string>
+    <string name="accept_decline">Have you guessed? :) \nTap to accept or decline.</string>
+    <string name="game_location">Tumo</string>
 
 </resources>
